# rag-machine-learning-bot

./: .env  pyproject.toml
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/22d9de3f-a76a-47c3-8d61-1c1f0fddfd1a/: index_metadata.pickle
notebook/: document.ipynb
